--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -5,7 +5,11 @@
   --white: rgb(250, 250, 250);
   --secondary: rgb(0, 59, 50);
   --bgLight: rgb(190, 181, 181);
+  --bg-color: rgb(20, 20, 20);
+  --card-color: rgb(23, 23, 23);
 }
+
+
 
 * {
   padding: 0;
@@ -49,11 +53,10 @@ body {
 }
 .hero .left img {
   width: 400px;
-  
 }
 .hero .right {
   color: var(--white);
-  margin-top: -7rem;    
+  margin-top: -7rem;
 }
 .hero .right h6 {
   font-size: 1.6rem;
@@ -112,8 +115,8 @@ body {
 .flex-1 {
   flex: 1;
 }
-.flex-2{
-    display: flex;
+.flex-2 {
+  display: flex;
 }
 .btn-secondary {
   background: transparent;
@@ -127,87 +130,300 @@ body {
 
 /* button */
 button {
-    padding: 0.6em 1.8em;
-    border: 2px solid #17C3B2;
-    position: relative;
-    overflow: hidden;
-    background-color: transparent;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 16px;
-    transition: .3s;
-    z-index: 1;
-    font-family: inherit;
-    color: #17C3B2;
-   }
-   
-   button::before {
-    content: '';
-    width: 0;
-    height: 300%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(45deg);
-    background: #17C3B2;
-    transition: .5s ease;
-    display: block;
-    z-index: -1;
-   }
-   
-   button:hover::before {
-    width: 105%;
-   }
-   
-   button:hover {
-    color: #111;
-   }
-
-   /* fondo */
-#imagen{
-    width: 100vw;
-    height: 100vh;
+  padding: 0.6em 1.8em;
+  border: 2px solid #17c3b2;
+  position: relative;
+  overflow: hidden;
+  background-color: transparent;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+  transition: 0.3s;
+  z-index: 1;
+  font-family: inherit;
+  color: #17c3b2;
 }
-#imagen img{
-    width: 100%;
-    height: 100%;
+
+button::before {
+  content: "";
+  width: 0;
+  height: 300%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  background: #17c3b2;
+  transition: 0.5s ease;
+  display: block;
+  z-index: -1;
+}
+
+button:hover::before {
+  width: 105%;
+}
+
+button:hover {
+  color: #111;
+}
+
+/* fondo */
+#imagen {
+  width: 100vw;
+  height: 80vh;
+}
+#imagen img {
+  width: 100%;
+  height: 100%;
 }
 
 /* init section about */
-section{
-    padding: 6rem;
-    }
-    section.about h1{
-    margin-bottom: 1rem;
-    font-size: 1.6rem;
-    font-weight: 600;
-    }
-    section.about h1 span{
-    color: var(--primary);
-    }
-    section.about h3{
-    font-size: 1rem;
-    margin-bottom: 1rem;
-    font-weight: 600;
-    }
-    section.about p{
-    font-family: 'Lato', sans-serif;
-    color: var(--secondary);
-    line-height: 1.9rem;
-    margin-bottom: 2rem;
-    }
-    section.about .socials{
-    display: flex;
-    }
-    section.about .socials a{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 35px;
-    height: 40px;
-    margin-right: 0.8rem;
-    border-radius: 50%;
-    }
-    section.about .socials a:hover{
-    background: var(--primary);
-    }
+section {
+  padding: 6rem;
+  width: 100vw;
+  height: 100vh;
+}
+section.about h1 {
+  margin-bottom: 1rem;
+  font-size: 1.6rem;
+  font-weight: 600;
+}
+section.about h1 span {
+  color: var(--primary);
+}
+section.about h3 {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  font-weight: 600;
+}
+section.about p {
+  font-family: "Lato", sans-serif;
+  color: var(--secondary);
+  line-height: 1.9rem;
+  margin-bottom: 2rem;
+}
+section.about .socials {
+  display: flex;
+}
+section.about .socials a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 40px;
+  margin-right: 0.8rem;
+  border-radius: 50%;
+}
+section.about .socials a:hover {
+  background: var(--primary);
+}
+
+/* finish section about */
+
+/* init a section of services */
+section.services {
+  background: rgb(17, 17, 17);
+  height: auto;
+  padding: 6rem 0 6rem 0;
+}
+.container .services-head {
+  color: rgb(10, 9, 9);
+  text-align: center;
+  margin-bottom: 1rem;
+  line-height: 0.5rem;
+  color: var(--primary);
+}
+.container .services-head  + p {
+  color: var(--white);
+  font-family: "Lato", sans-serif;
+  margin-bottom: 1rem;
+  text-align: center;
+  margin-bottom: 6rem;
+  font-weight: 400;
+}
+
+
+
+#cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px;  
+  width: calc(100% - 20px);
+}
+
+#cards:hover > .card::after {
+  opacity: 1;
+}
+
+.card {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  height: 260px;
+  flex-direction: column;
+  position: relative;
+  width: 300px;  
+}
+
+.card:hover::before {
+  opacity: 1;
+}
+
+.card::before,
+.card::after {
+  border-radius: inherit;
+  content: "";
+  height: 100%;
+  left: 0px;
+  opacity: 0;
+  position: absolute;
+  top: 0px;
+  transition: opacity 500ms;
+  width: 100%;
+}
+
+.card::before {
+  background: radial-gradient(
+    800px circle at var(--mouse-x) var(--mouse-y), 
+    rgba(255, 255, 255, 0.06),
+    transparent 40%
+  );
+  z-index: 3;
+}
+
+.card::after {  
+  background: radial-gradient(
+    600px circle at var(--mouse-x) var(--mouse-y), 
+    rgba(255, 255, 255, 0.4),
+    transparent 40%
+  );
+  z-index: 1;
+}
+
+.card > .card-content {
+  background-color: var(--card-color);
+  border-radius: inherit;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  inset: 1px;
+  padding: 10px;
+  position: absolute;
+  z-index: 2;
+}
+
+/* -- ↓ ↓ ↓ extra card content styles ↓ ↓ ↓ -- */
+
+.container .services h1, h2, h3, h4, span {
+  color: rgb(240, 240, 240);
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  margin: 0px;
+}
+
+.services i {  
+  color: rgb(240, 240, 240);
+}
+
+.card-image {
+  align-items: center;
+  display: flex;
+  height: 140px;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.card-image > i {
+  font-size: 6em;
+  opacity: 0.25;
+}
+
+.card-info-wrapper {
+  align-items: center;
+  display: flex;
+  flex-grow: 1;
+  justify-content: flex-start;
+  padding: 0px 20px;
+}
+
+.card-info {
+  align-items: flex-start;
+  display: flex;
+  gap: 10px;
+}
+
+.card-info > i {  
+  font-size: 1em;
+  height: 20px;
+  line-height: 20px;
+}
+
+.card-info-title > h3 {
+  font-size: 1.1em;
+  line-height: 20px;
+}
+
+.card-info-title > h4 {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.85em;
+  margin-top: 8px;
+}
+
+/* -- ↓ ↓ ↓ some responsiveness ↓ ↓ ↓ -- */
+
+@media(max-width: 1000px) {
+  body {
+    align-items: flex-start;  
+    overflow: auto;
+  }
+  
+  #cards {    
+    max-width: 1000px;
+    padding: 10px 0px;
+  }
+  
+  .card {
+    flex-shrink: 1;
+    width: calc(50% - 4px);
+  }
+}
+
+@media(max-width: 500px) {
+  .card {
+    height: 180px;
+  }
+  
+  .card-image {
+    height: 80px;  
+  }
+  
+  .card-image > i {
+    font-size: 3em;
+  }
+    
+  .card-info-wrapper {
+    padding: 0px 10px;
+  }
+  
+  .card-info > i { 
+    font-size: 0.8em; 
+  }
+  
+  .card-info-title > h3 {
+    font-size: 0.9em;
+  }
+
+  .card-info-title > h4 {
+    font-size: 0.8em;
+    margin-top: 4px;
+  }
+}
+
+@media(max-width: 320px) {
+  .card {
+    width: 100%;
+  }
+}
+
+/* -- ↓ ↓ ↓ YouTube link styles ↓ ↓ ↓ -- */
