--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -51,14 +51,40 @@ body {
   padding-top: 2rem;
   padding-bottom: 3rem;
   background-color: black;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 768px) {
+  
 }
 .hero .left img {
   width: 400px;
 }
+
 .hero .right {
   color: var(--white);
   margin-top: -7rem;
 }
+@media(max-width: 480px) {
+  .hero .left img {
+    width: 200px;
+    height: auto;
+  }
+  .hero .right{
+    margin: 15px 5px 0px 5px;
+  }
+  }
+
+@media only screen and (max-width: 768px) and (min-width: 481px){
+    .hero .left img {
+      width: 400px;
+      height: auto;
+    }
+    .hero .right{
+      margin: 30px 10px 0px 30px;
+    }
+
+  }
 .hero .right h6 {
   font-size: 1.6rem;
   color: var(--primary);
@@ -176,6 +202,7 @@ button:hover {
   width: 100%;
   height: 100%;
 }
+
 
 /* init section about */
 section {
