--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -1,4 +1,9 @@
 @import "utilities.css";
+@import url(https://fonts.googleapis.com/css?family=Raleway:300);
+@import url(https://fonts.googleapis.com/css?family=Lusitana:400,700);
+.align-center {
+  text-align: center;
+}
 :root {
   --primary: rgb(29, 221, 189);
   --bgDark: rgb(12, 12, 12);
@@ -8,8 +13,6 @@
   --bg-color: rgb(20, 20, 20);
   --card-color: rgb(23, 23, 23);
 }
-
-
 
 * {
   padding: 0;
@@ -42,7 +45,7 @@ body {
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
 }
-.container {
+.contenedor {
   max-width: 1400px;
   padding: 0 15px;
   margin: 0 auto;
@@ -55,7 +58,6 @@ body {
 }
 
 @media (max-width: 768px) {
-  
 }
 .hero .left img {
   width: 400px;
@@ -65,26 +67,25 @@ body {
   color: var(--white);
   margin-top: -7rem;
 }
-@media(max-width: 480px) {
+@media (max-width: 480px) {
   .hero .left img {
     width: 200px;
     height: auto;
   }
-  .hero .right{
+  .hero .right {
     margin: 15px 5px 0px 5px;
   }
-  }
+}
 
-@media only screen and (max-width: 768px) and (min-width: 481px){
-    .hero .left img {
-      width: 400px;
-      height: auto;
-    }
-    .hero .right{
-      margin: 30px 10px 0px 30px;
-    }
-
+@media only screen and (max-width: 768px) and (min-width: 481px) {
+  .hero .left img {
+    width: 400px;
+    height: auto;
   }
+  .hero .right {
+    margin: 30px 10px 0px 30px;
+  }
+}
 .hero .right h6 {
   font-size: 1.6rem;
   color: var(--primary);
@@ -203,7 +204,6 @@ button:hover {
   height: 100%;
 }
 
-
 /* init section about */
 section {
   padding: 6rem;
@@ -242,14 +242,16 @@ section.about .socials a {
   margin-right: 0.8rem;
   border-radius: 50%;
 }
-section.about .socials a:link, a:visited, a:active{
+section.about .socials a:link,
+a:visited,
+a:active {
   text-decoration: none;
 }
 section.about .socials a:hover {
   background: var(--primary);
 }
 
-section.about .socials a i{
+section.about .socials a i {
   color: var(--bgDark);
 }
 
@@ -261,14 +263,14 @@ section.services {
   height: auto;
   padding: 6rem 0 6rem 0;
 }
-.Container .services-head {
+.contenedor .services-head {
   color: rgb(10, 9, 9);
   text-align: center;
   margin-bottom: 1rem;
   line-height: 0.5rem;
   color: var(--primary);
 }
-.Container .services-head  + p {
+.contenedor .services-head + p {
   color: var(--white);
   font-family: "Lato", sans-serif;
   margin-bottom: 1rem;
@@ -277,13 +279,11 @@ section.services {
   font-weight: 400;
 }
 
-
-
 #cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 8px;  
+  gap: 8px;
   width: calc(100% - 20px);
 }
 
@@ -299,7 +299,7 @@ section.services {
   height: 260px;
   flex-direction: column;
   position: relative;
-  width: 300px;  
+  width: 300px;
 }
 
 .cardes:hover::before {
@@ -321,16 +321,16 @@ section.services {
 
 .cardes::before {
   background: radial-gradient(
-    800px circle at var(--mouse-x) var(--mouse-y), 
+    800px circle at var(--mouse-x) var(--mouse-y),
     rgba(255, 255, 255, 0.06),
     transparent 40%
   );
   z-index: 3;
 }
 
-.cardes::after {  
+.cardes::after {
   background: radial-gradient(
-    600px circle at var(--mouse-x) var(--mouse-y), 
+    600px circle at var(--mouse-x) var(--mouse-y),
     rgba(255, 255, 255, 0.4),
     transparent 40%
   );
@@ -351,14 +351,18 @@ section.services {
 
 /* -- ↓ ↓ ↓ extra card content styles ↓ ↓ ↓ -- */
 
-.Container .services h1, h2, h3, h4, span {
+.contenedor .services h1,
+h2,
+h3,
+h4,
+span {
   color: rgb(240, 240, 240);
   font-family: "Rubik", sans-serif;
   font-weight: 400;
   margin: 0px;
 }
 
-.services i {  
+.services i {
   color: rgb(240, 240, 240);
 }
 
@@ -389,7 +393,7 @@ section.services {
   gap: 10px;
 }
 
-.card-info > i {  
+.card-info > i {
   font-size: 1em;
   height: 20px;
   line-height: 20px;
@@ -408,44 +412,44 @@ section.services {
 
 /* -- ↓ ↓ ↓ some responsiveness ↓ ↓ ↓ -- */
 
-@media(max-width: 1000px) {
+@media (max-width: 1000px) {
   body {
-    align-items: flex-start;  
+    align-items: flex-start;
     overflow: auto;
   }
-  
-  #cards {    
+
+  #cards {
     max-width: 1000px;
     padding: 10px 0px;
   }
-  
+
   .cardes {
     flex-shrink: 1;
     width: calc(50% - 4px);
   }
 }
 
-@media(max-width: 500px) {
+@media (max-width: 500px) {
   .cardes {
     height: 180px;
   }
-  
+
   .card-image {
-    height: 80px;  
+    height: 80px;
   }
-  
+
   .card-image > i {
     font-size: 3em;
   }
-    
+
   .card-info-wrapper {
     padding: 0px 10px;
   }
-  
-  .card-info > i { 
-    font-size: 0.8em; 
+
+  .card-info > i {
+    font-size: 0.8em;
   }
-  
+
   .card-info-title > h3 {
     font-size: 0.9em;
   }
@@ -456,177 +460,259 @@ section.services {
   }
 }
 
-@media(max-width: 320px) {
+@media (max-width: 320px) {
   .cardes {
     width: 100%;
   }
 }
 
 /* Footer */
-.site-footer
-{
-  background-color:#26272b;
-  padding:45px 0 20px;
-  font-size:15px;
-  line-height:24px;
-  color:#737373;
+.site-footer {
+  background-color: #26272b;
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
 
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-.site-footer hr
-{
-  border-top-color:#bbb;
-  opacity:0.5
+.site-footer hr {
+  border-top-color: #bbb;
+  opacity: 0.5;
 }
-.site-footer hr.small
-{
-  margin:20px 0
+.site-footer hr.small {
+  margin: 20px 0;
 }
-.site-footer h6
-{
-  color:#fff;
-  font-size:16px;
-  text-transform:uppercase;
-  margin-top:5px;
-  letter-spacing:2px
+.site-footer h6 {
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
 }
-.site-footer a
-{
-  color:#737373;
+.site-footer a {
+  color: #737373;
 }
-.site-footer a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+.site-footer a:hover {
+  color: #3366cc;
+  text-decoration: none;
 }
-.footer-links
-{
-  padding-left:0;
-  list-style:none
+.footer-links {
+  padding-left: 0;
+  list-style: none;
 }
-.footer-links li
-{
-  display:block
+.footer-links li {
+  display: block;
 }
-.footer-links a
-{
-  color:#737373
+.footer-links a {
+  color: #737373;
 }
-.footer-links a:active,.footer-links a:focus,.footer-links a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+.footer-links a:active,
+.footer-links a:focus,
+.footer-links a:hover {
+  color: #3366cc;
+  text-decoration: none;
 }
-.footer-links.inline li
-{
-  display:inline-block
+.footer-links.inline li {
+  display: inline-block;
 }
-.site-footer .social-icons
-{
-  text-align:right
+.site-footer .social-icons {
+  text-align: right;
 }
-.site-footer .social-icons a
-{
-  width:40px;
-  height:40px;
-  line-height:40px;
-  margin-left:6px;
-  margin-right:0;
-  border-radius:100%;
-  background-color:#33353d
+.site-footer .social-icons a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d;
 }
-.copyright-text
-{
-  margin:0
+.copyright-text {
+  margin: 0;
 }
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
-  {
-    margin-bottom:30px
+@media (max-width: 991px) {
+  .site-footer [class^="col-"] {
+    margin-bottom: 30px;
   }
 }
-@media (max-width:767px)
-{
-  .site-footer
-  {
-    padding-bottom:0;
+@media (max-width: 767px) {
+  .site-footer {
+    padding-bottom: 0;
     margin-left: 0px;
   }
-  .site-footer .copyright-text,.site-footer .social-icons
-  {
-    text-align:center
+  .site-footer .copyright-text,
+  .site-footer .social-icons {
+    text-align: center;
   }
 }
 
-.social-icons
-{
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none
+.social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
-.social-icons li
-{
-  display:inline-block;
-  margin-bottom:4px
+.social-icons li {
+  display: inline-block;
+  margin-bottom: 4px;
 }
-.social-icons li.title
-{
-  margin-right:15px;
-  text-transform:uppercase;
-  color:#96a2b2;
-  font-weight:700;
-  font-size:13px
+.social-icons li.title {
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px;
 }
-.social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
-  font-size:16px;
-  display:inline-block;
-  line-height:44px;
-  width:44px;
-  height:44px;
-  text-align:center;
-  margin-right:8px;
-  border-radius:100%;
-  -webkit-transition:all .2s linear;
-  -o-transition:all .2s linear;
-  transition:all .2s linear
+.social-icons a {
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover
-{
-  color:#fff;
-  background-color:#29aafe
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+  color: #fff;
+  background-color: #29aafe;
 }
-.social-icons.size-sm a
-{
-  line-height:34px;
-  height:34px;
-  width:34px;
-  font-size:14px
+.social-icons.size-sm a {
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px;
 }
-.social-icons a.facebook:hover
-{
-  background-color:#3b5998
+.social-icons a.facebook:hover {
+  background-color: #3b5998;
 }
-.social-icons a.twitter:hover
-{
-  background-color:#00aced
+.social-icons a.twitter:hover {
+  background-color: #00aced;
 }
-.social-icons a.linkedin:hover
-{
-  background-color:#007bb6
+.social-icons a.linkedin:hover {
+  background-color: #007bb6;
 }
-.social-icons a.dribbble:hover
-{
-  background-color:#ea4c89
+.social-icons a.dribbble:hover {
+  background-color: #ea4c89;
 }
-@media (max-width:767px)
-{
-  .social-icons li.title
-  {
-    display:block;
-    margin-right:0;
-    font-weight:600
+@media (max-width: 767px) {
+  .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600;
   }
+}
+/* init nsection contact */
+
+.rowed{
+  margin: -20px 0;
+}
+.rowed:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.rowed .col {
+  padding: 0 20px;
+  float: left;
+  box-sizing: border-box;
+}
+.rowed .col.x-50 {
+  width: 50%;
+}
+.rowed .col.x-100 {
+  width: 100%;
+}
+
+.content-wrapper {
+  min-height: 100%;
+  position: relative;
+}
+
+.get-in-touch {
+  max-width: 650px;
+  margin: 0 auto;
+  padding: 0%;
+  padding-top: 100px;
+}
+.get-in-touch .title {
+  text-align: center;
+  font-family: Raleway, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 36px;
+  line-height: 48px;
+  padding-bottom: 48px;
+}
+
+.contact-form .form-field {
+  position: relative;
+  margin: 32px 0;
+}
+.contact-form .input-text {
+  display: block;
+  width: 100%;
+  height: 36px;
+  border-width: 0 0 2px 0;
+  border-color: #000;
+  font-family: Lusitana, serif;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 400;
+}
+.contact-form .input-text:focus {
+  outline: none;
+}
+.contact-form .input-text:focus + .label, .contact-form .input-text.not-empty + .label {
+  transform: translateY(-24px);
+}
+.contact-form .label {
+  position: absolute;
+  left: 20px;
+  bottom: 11px;
+  font-family: Lusitana, serif;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 400;
+  color: #888;
+  cursor: text;
+  transition: transform 0.2s ease-in-out;
+}
+.contact-form .submit-btn {
+  display: inline-block;
+  background-color: #000;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.note {
+  position: absolute;
+  left: 0;
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
+  font-family: Lusitana, serif;
+  font-size: 16px;
+  line-height: 21px;
+}
+.note .link {
+  color: #888;
+  text-decoration: none;
+}
+.note .link:hover {
+  text-decoration: underline;
 }
