--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -336,7 +336,10 @@ section.services {
   position: relative;
   width: 300px;
 }
-
+.cardes a {
+  text-decoration: none;
+  z-index: 10000;
+}
 .cardes:hover::before {
   opacity: 1;
 }
