--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -207,7 +207,6 @@ section {
   height: 100vh;
 }
 
-
 .contenedor {
   max-width: 1400px;
   padding: 0 15px;
@@ -261,31 +260,32 @@ section.about .socials a i {
 }
 
 @media (max-width: 480px) {
-  .about{
+  .about {
     height: 100%;
     padding: 10px;
   }
-  .about .contenedor .right{
+  .about .contenedor .right {
     min-width: 300px;
   }
-  .contenedor .left, .right{
+  .contenedor .left,
+  .right {
     margin-right: 20px;
   }
-
 }
 
 @media only screen and (max-width: 768px) and (min-width: 481px) {
-  .about{
+  .about {
     height: 100%;
     padding: 10px;
   }
-  .contenedor{
+  .contenedor {
     padding: 10px;
   }
-  .contenedor .left, .right{
+  .contenedor .left,
+  .right {
     margin-right: 20px;
   }
-  .about .contenedor .right{
+  .about .contenedor .right {
     min-width: 300px;
   }
 }
@@ -649,7 +649,7 @@ span {
 }
 /* init nsection contact */
 
-.rowed{
+.rowed {
   margin: -20px 0;
 }
 .rowed:after {
@@ -681,12 +681,10 @@ span {
   padding-top: 100px;
 }
 @media screen and (max-width: 480px) {
-  .get-in-touch{
+  .get-in-touch {
     height: 100%;
   }
-  
 }
-
 
 .get-in-touch .title {
   text-align: center;
@@ -716,7 +714,8 @@ span {
 .contact-form .input-text:focus {
   outline: none;
 }
-.contact-form .input-text:focus + .label, .contact-form .input-text.not-empty + .label {
+.contact-form .input-text:focus + .label,
+.contact-form .input-text.not-empty + .label {
   transform: translateY(-24px);
 }
 .contact-form .label {
@@ -762,7 +761,7 @@ span {
 
 /* section socials */
 
-#socials{
+#socials {
   background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
@@ -770,7 +769,14 @@ span {
   row-gap: 40px;
 }
 
-#socials button, #socials button::before {
+@media screen and (max-width:749px) {
+  #socials{
+    height: auto;
+  }
+  
+}
+#socials button,
+#socials button::before {
   font-family: inherit;
   font-size: 20px;
   background: royalblue;
@@ -783,47 +789,45 @@ span {
   border-radius: 16px;
   overflow: hidden;
   transition: all 0.2s;
- }
- 
- #socials button span {
+}
+
+#socials button span {
   display: block;
   margin-left: 0.3em;
   transition: all 0.3s ease-in-out;
- }
- 
- #socials button svg {
+}
+
+#socials button svg {
   display: block;
   transform-origin: center center;
   transition: transform 0.3s ease-in-out;
- }
- 
- #socials button:hover .svg-wrapper {
+}
+
+#socials button:hover .svg-wrapper {
   animation: fly-1 0.6s ease-in-out infinite alternate;
- }
- 
- #socials button:hover svg {
+}
+
+#socials button:hover svg {
   transform: translateX(1.2em) rotate(45deg) scale(1.1);
- }
- 
- #socials button:hover span {
+}
+
+#socials button:hover span {
   transform: translateX(5em);
- }
- 
- #socials button:active {
+}
+
+#socials button:active {
   transform: scale(0.95);
- }
- 
- @keyframes fly-1 {
+}
+
+@keyframes fly-1 {
   from {
-   transform: translateY(0.1em);
+    transform: translateY(0.1em);
   }
- 
+
   to {
-   transform: translateY(-0.1em);
+    transform: translateY(-0.1em);
   }
- }
- 
- 
+}
 
 .checkbox-group {
   display: flex;
@@ -834,9 +838,9 @@ span {
   margin-right: auto;
   max-width: 600px;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .checkbox-group > * {
   margin: 0.5rem 0.5rem;
@@ -854,7 +858,7 @@ span {
 .checkbox-input {
   clip: rect(0 0 0 0);
   -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
+  clip-path: inset(100%);
   height: 1px;
   overflow: hidden;
   position: absolute;
@@ -872,7 +876,8 @@ span {
   background-color: #2260ff;
   border-color: #2260ff;
 }
-.checkbox-input:checked + .checkbox-tile .checkbox-icon, .checkbox-input:checked + .checkbox-tile .checkbox-label {
+.checkbox-input:checked + .checkbox-tile .checkbox-icon,
+.checkbox-input:checked + .checkbox-tile .checkbox-label {
   color: #2260ff;
 }
 .checkbox-input:focus + .checkbox-tile {
